--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Main Page</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="Style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         
@@ -25,6 +25,6 @@
             <span id="next" class="next">Next</span>
         </div>
 
-        <script src="Script.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
